--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "slugify": "^1.6.6"
   }
 }
