--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "redis": "^4.6.12"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
